// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakingChangesV0.7.4.sol - {"compiler":"0.7.3","bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
compiler: "0.7.3"
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity ^0.7.0;

import {symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4} from "File2.sol";

=====================================output=====================================
pragma solidity ^0.7.0;

import { symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4 } from "File2.sol";

================================================================================
`;

exports[`BreakingChangesV0.7.4.sol - {"compiler":"0.7.3"} format 1`] = `
====================================options=====================================
compiler: "0.7.3"
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity ^0.7.0;

import {symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4} from "File2.sol";

=====================================output=====================================
pragma solidity ^0.7.0;

import {symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4} from "File2.sol";

================================================================================
`;

exports[`BreakingChangesV0.7.4.sol - {"compiler":"0.7.4","bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
compiler: "0.7.4"
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity ^0.7.0;

import {symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4} from "File2.sol";

=====================================output=====================================
pragma solidity ^0.7.0;

import {
    symbol1 as alias1,
    symbol2 as alias2,
    symbol3 as alias3,
    symbol4
} from "File2.sol";

================================================================================
`;

exports[`BreakingChangesV0.7.4.sol - {"compiler":"0.7.4"} format 1`] = `
====================================options=====================================
compiler: "0.7.4"
parsers: ["solidity-parse"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
pragma solidity ^0.7.0;

import {symbol1 as alias1, symbol2 as alias2, symbol3 as alias3, symbol4} from "File2.sol";

=====================================output=====================================
pragma solidity ^0.7.0;

import {
    symbol1 as alias1,
    symbol2 as alias2,
    symbol3 as alias3,
    symbol4
} from "File2.sol";

================================================================================
`;
